--- a/Common/src/main/resources/META-INF/mods.toml
+++ b/Common/src/main/resources/META-INF/mods.toml
@@ -1,14 +1,14 @@
 modLoader="javafml"
 loaderVersion="*"
 license="All rights reserved"
-issueTrackerURL="https://github.com/ricksouth/serilum-mc-mods/labels/Mod:%20Random%20Shulker%20Colours"
+issueTrackerURL="https://github.com/Serilum/.issue-tracker/labels/Mod:%20Random%20Shulker%20Colours"
 logoFile="icon.png"
 
 [[mods]]
 modId="randomshulkercolours"
-version="3.1"
+version="3.2"
 displayName="Random Shulker Colours"
-displayURL="https://curseforge.com/minecraft/mc-mods/random-shulker-colours"
+displayURL="https://serilum.com/mod/random-shulker-colours"
 authors="Rick South"
 description='''Gives new shulker spawns a random shell colour based on a configurable list.
 '''
@@ -21,13 +21,15 @@ If you would like to contribute too, check out https://ricksouth.com/donate. App
 
 [[dependencies.randomshulkercolours]]
     modId="collective"
+    type="required"
     mandatory=true
-    versionRange="[7.3,)"
+    versionRange="[7.21,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.randomshulkercolours]]
     modId="minecraft"
+    type="required"
     mandatory=true
     versionRange="[1.20.1]"
     ordering="NONE"
